--- a/src/components/Container4.css
+++ b/src/components/Container4.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 250px;
 }
 
 .container4 h3 {
@@ -12,7 +13,8 @@
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 100px;
+  padding-top: 50px;
+  
 }
 
 .container4 hr {
@@ -20,7 +22,6 @@
   height: 5px;
   background-color: #00b7ff;
   border: none;
-  margin-bottom: 100px;
   margin-top: 10px;
 }
 
@@ -30,13 +31,11 @@
   gap: 40px;
   justify-content: center;
   background-color: #111111;
-  padding-bottom: 50px;
 }
 
-/* src/components/VideoCard.css */
 .video-card {
-  width: 388px;
-  height: 252px;
+  width: 500px;
+  height: 300px;
   perspective: 1000px;
   cursor: pointer;
   position: relative;
@@ -110,4 +109,34 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+
+.container4-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #111111;
+}
+
+.container4-2 a {
+  margin-top: 20px;
+  text-decoration: none;
+  color: #00b7ff;
+  border: 1px solid #00b7ff;
+  padding: 18px 25px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+}
+
+.container4-2 a .fa {
+  margin-left: 10px;
+}
+
+.container4-2 a:hover{
+  color: #fff;
+  background-color: #00b7ff;
 }
