--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,4 @@
+
 header {
   background-color: black;
   height: 90px;
@@ -5,6 +6,15 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  transition: top 0.3s;
+  z-index: 1000;
+}
+
+header.hidden {
+  top: -90px; /* Adjust this value based on your header height */
 }
 
 header a {
@@ -15,11 +25,13 @@ header a {
   letter-spacing: -0.035em;
   text-transform: uppercase;
 }
+
 nav {
   display: flex;
   gap: 50px;
   cursor: pointer;
 }
+
 nav a {
   color: #fff;
   font-size: 13px;
@@ -27,6 +39,7 @@ nav a {
   font-weight: 900;
   letter-spacing: 0.085em;
 }
-nav a:hover{
-    color: #00b7ff;
+
+nav a:hover {
+  color: #00b7ff;
 }
