--- a/src/components/Container1.css
+++ b/src/components/Container1.css
@@ -1,10 +1,18 @@
-.container {
+
+.container{
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+.container-1 {
+  width: 1230px;
   height: calc(100vh - 90px);
   background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 280px;
+  gap: 200px;
+  margin: 0 auto;
 }
 
 .title h2 {
@@ -28,7 +36,8 @@
   width: 400px;
   height: 400px;
   border-radius: 50%;
-  opacity: 0; /* Initially hidden */border: 6px solid #ffffff;
+  opacity: 0; /* Initially hidden */
+  border: 6px solid #ffffff;
 }
 
 .flyIn {
