--- a/src/components/Container2.css
+++ b/src/components/Container2.css
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 800px;
+  align-items: start;
+  max-width: 1230px;
   height: 400px;
   margin-left: 300px;
 }
@@ -50,6 +51,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  max-width: 800px;
 }
 
 .cv {
