--- a/src/components/Container4.css
+++ b/src/components/Container4.css
@@ -1,4 +1,10 @@
 /* src/Container4.css */
+.container4-0{
+  background-color: #111111;
+  display: flex;
+  justify-content: center;
+}
+
 .container4 {
   background-color: #111111;
   display: flex;
@@ -6,6 +12,7 @@
   justify-content: center;
   align-items: center;
   height: 250px;
+  width: 1230px;
 }
 
 .container4 h3 {
@@ -118,7 +125,11 @@ video {
   height: 100%;
   object-fit: cover;
 }
-
+.container4-2-0{
+  background-color: #111111;
+  display: flex;
+  justify-content: center;
+}
 .container4-2 {
   display: flex;
   flex-direction: column;
@@ -127,6 +138,7 @@ video {
   padding: 20px;
   background-color: #111111;
   padding-bottom: 100px;
+  width: 1230px;
 }
 
 .container4-2 a {
