--- a/src/components/Container5.css
+++ b/src/components/Container5.css
@@ -94,12 +94,17 @@ button {
   color: #fff;
   font-size: 16px;
   cursor: pointer;
+  transition: transform 0.1s ease-in-out;
 }
 
 button:hover {
   color: #00b7ff;
   background-color: #fff;
   border: 1px solid #00b7ff;
+}
+
+button:active {
+  transform: scale(0.95);
 }
 
 .modal {
@@ -124,18 +129,39 @@ button:hover {
   width: 80%;
   max-width: 500px;
   text-align: center;
+  position: relative;
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.checkmark {
+  font-size: 30px;
+  color: green;
+  background-color: #e0ffe0;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 5px;
+  background-color: #00b7ff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  animation: progress 5s linear forwards;
+}
+
+@keyframes progress {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0;
+  }
 }
