--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,34 @@
+.menu-icon {
+  height: 36px;
+  width: 36px;
+}
+.burger[aria-expanded="true"] .line1 {
+  transform: rotate(45deg) translateY(5px);
+}
+.burger[aria-expanded="true"] .line2 {
+  transform: scale(0, 1);
+}
+.burger[aria-expanded="true"] .line3 {
+  transform: rotate(-45deg) translateY(-5px);
+}
+.burger {
+  padding: 0;
+  background-color: black;
+  display: none;
+  border: none;
+}
+.burger:hover {
+  background-color: black;
+  border: none;
+}
 
+.line1,
+.line2,
+.line3 {
+  transform-origin: center;
+  transition: 0.2s;
+  color: #fff;
+}
 
 .header-background {
   display: flex;
@@ -8,11 +38,11 @@
   top: 0;
   width: 100%;
   z-index: 1000;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 
 .header-background.hidden {
-  transform: translateY(-100%); 
+  transform: translateY(-100%);
 }
 
 header {
@@ -22,8 +52,10 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 1230px;
+  width: 90%;
+  max-width: 1230px;
   cursor: pointer;
+  margin: 0 auto;
 }
 
 header a {
@@ -51,4 +83,62 @@ nav a {
 
 nav a:hover {
   color: #00b7ff;
+}
+
+
+
+@media (max-width: 1200px) {
+  header {
+    width: 80%;
+  }
+}
+
+@media (max-width: 980px) {
+  .burger {
+    display: block;
+  }
+  nav {
+    flex-direction: column;
+    gap: 20px;
+    position: absolute;
+    top: 90px;
+    left: 0;
+    width: 100%;
+    background-color: black;
+    padding: 20px;
+    transform: translateX(100%);
+    transition: transform 500ms ease-in-out, opacity 500ms ease-in-out;
+    visibility: hidden; 
+  }
+  nav.open {
+    display: flex;
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible; 
+    text-align: center;
+  }
+  nav.closing {
+    display: flex;
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  nav.opening {
+    display: flex;
+    visibility: visible;
+  }
+}
+
+@media (max-width: 800px) {
+  header {
+    width: 90%;
+  }
+  .logo {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    width: 90%;
+  }
 }
