--- a/src/components/Container1.css
+++ b/src/components/Container1.css
@@ -6,13 +6,12 @@
 
 .container-1 {
   width: 1230px;
-  height:100vh;
+  height: 100vh;
   background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 200px;
-
 }
 
 .title h2 {
@@ -75,5 +74,152 @@
   100% {
     transform: scale(1);
     opacity: 1;
+  }
+}
+
+@media (max-width: 1400px) {
+  .container-1 {
+    width: 100%;
+  }
+
+  .title h2 {
+    font-size: 60px;
+  }
+
+  .title h1 {
+    font-size: 60px;
+  }
+
+  .photo {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+  .container svg {
+    top: 85%;
+    left: 90%;
+    height: 4em;
+    width: 4em;
+  }
+
+@media (max-width: 1200px) {
+  .container-1 {
+    width: 80%;
+  }
+
+  .title h2 {
+    font-size: 50px;
+  }
+
+  .title h1 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .title h2 {
+    font-size: 40px;
+  }
+
+  .title h1 {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 1060px) {
+  .container-1 {
+    gap: 50px;
+    flex-direction: column;
+  }
+
+  .title h2, .title h1 {
+    font-size: 50px;
+  }
+
+  .photo {
+    width: 300px;
+    height: 300px;
+  }
+
+
+
+  .container svg {
+    top: 85%;
+    left: 90%;
+    height: 3em;
+    width: 3em;
+  }
+
+@media (max-width: 1060px){
+
+    .title h2 {
+    font-size: 35px;
+  }
+
+  .title h1 {
+    font-size: 35px;
+  }
+}
+@media (max-width: 700px){
+    .container svg {
+    top: 85%;
+    left: 88%;
+    height: 2.5em;
+    width: 2.5em;
+  }
+}
+
+@media (max-width: 480px) {
+  .container-1 {
+    gap: 30px;
+  }
+
+  .title h2, .title h1 {
+    font-size: 40px;
+  }
+
+  .photo {
+    width: 200px;
+    height: 200px;
+  }
+
+  .container svg {
+    top: 85%;
+    left: 85%;
+    height: 2.5em;
+    width: 2.5em;
+  }
+}
+
+@media (max-width: 360px) {
+  .container-1 {
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .title {
+    order: 2; /* Move title below the photo */
+  }
+
+  .photo-container {
+    order: 1; /* Move photo above the title */
+  }
+
+  .title h2, .title h1 {
+    font-size: 30px;
+  }
+
+  .photo {
+    width: 150px;
+    height: 150px;
+  }
+
+  .container svg {
+    top: 85%;
+    left: 80%;
+    height: 2em;
+    width: 2em;
   }
 }
