--- a/src/components/Container3.css
+++ b/src/components/Container3.css
@@ -1,4 +1,4 @@
-.skills-container{
+.skills-container {
   display: flex;
   justify-content: center;
   background-color: #191919;
@@ -10,17 +10,13 @@
   max-width: 1230px;
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
 }
 
-
 .skills {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-
 }
 
 .skills hr {
@@ -54,8 +50,8 @@
   justify-content: center;
   font-size: 1.3em;
   margin: 0 10px;
-  perspective: 100px; /* Add perspective */
-    cursor: pointer;
+  perspective: 100px;
+  cursor: pointer;
 }
 
 .icon-inner {
@@ -70,7 +66,8 @@
   transform: rotateY(180deg);
 }
 
-.icon-front, .icon-back {
+.icon-front,
+.icon-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -82,10 +79,83 @@
 
 .icon-back {
   transform: rotateY(180deg);
-  color: white; /* Make the text white */
+  color: white;
 }
 
 .icon img {
-  max-width: 100%; /* Increase the size of the images */
-  max-height: 100%; /* Increase the size of the images */
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* Media Queries for Responsive Design */
+@media (max-width: 1200px) {
+  .skills-container-1 {
+    max-width: 100%;
+  }
+.icon {
+  width: 110px;
+  height: 110px;
+}
+
+}
+
+@media (max-width: 1024px) {
+  .icon {
+    width: 100px;
+    height: 100px;
+  }
+
+  .icon-inner {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 900px) {
+  .skills-container-1 {
+    height: auto;
+    padding: 20px;
+  }
+
+  .icon {
+    width: 90px;
+    height: 90px;
+  }
+
+  .icon-inner {
+    width: 80%;
+    height: 80%;
+  }
+}
+
+@media (max-width: 700px) {
+   .icon-inner {
+    width: 80%;
+    height: 80%;
+  }
+} 
+
+@media (max-width: 600px) {
+   .icon-inner {
+    width: 75%;
+    height: 75%;
+  }
+
+    .icon {
+    width: 60px;
+    height: 60px;
+    font-size: 1rem;
+  }
+} 
+
+@media (max-width: 480px) {
+  .icon {
+    width: 55px;
+    height: 55px;
+  }
+
+  .icon-inner {
+    width: 65%;
+    height: 65%;
+  }
 }
