--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
   padding: 0;
   font-family: "Lato", sans-serif;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #00b7ff black;
 }
+
 body {
   height: 100vh;
 }
